# tidal-rs

./: Cargo.toml
src/: lib.rs  request.rs
src/media/: album.rs  artist.rs  favorites.rs  mod.rs  stream.rs  track.rs
src/session/: auth.rs  config.rs  mod.rs  search.rs
